test/analyze/type_check/trait_bounds/incorrect_bound_arity.exp
Error: Incorrect number of type parameters. Expected 1 type parameter but found 2.
test/analyze/type_check/trait_bounds/incorrect_bound_arity.myte:5:11-27
 5 | fun foo<T: Trait<Int, Bool>>(x: T) {}
   |            ^^^^^^^^^^^^^^^^