test/analyze/type_check/trait_bounds/incorrect_bound_arity.myte
module test

trait Trait<T> {}

fun foo<T: Trait<Int, Bool>>(x: T) {}

fun main() {}